syntax = "proto3";

package pb;

import "google/protobuf/timestamp.proto";
import "google/protobuf/wrappers.proto";
import "barber/time_of_day.proto";

option go_package = "barbershop/src/pb/barber";

message BarberShop {
    string shop_id = 1;
    int32 status = 2;
    string owner_id = 3;
    string name = 4;
    string coordinates = 5;
    string address = 6;
    string image = 7;
    repeated string list_image = 8;
    google.protobuf.Timestamp created_at = 9;
    float distance = 10;
    google.protobuf.DoubleValue longitude = 11;
    google.protobuf.DoubleValue latitude = 12;
    bool is_reputation = 13;
    float rate = 14;
    int32 facility = 15;
    optional string chain_id = 16;
    optional TimeOfDay start_time = 17;
    optional TimeOfDay end_time = 18;
    optional TimeOfDay break_time = 19;
    int32 break_minutes = 20;
    int32 interval_scheduler = 21;
}